new updated booklet

--- a/booklet/smsim-course-materials.tex
+++ b/booklet/smsim-course-materials.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper, 11pt, twoside]{article}  % Based on the ECS Thesis style
 \usepackage{graphicx}
 \usepackage{makeidx}
-% \graphicspath{figures/}  % Location of the graphics files
+% \graphicspath{/figures}  % Location of the graphics files
 \usepackage{multirow}
 \usepackage{threeparttable}
 % Making R code work!
